--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 	<body>
 		<div class="header">
 			<h1><img src="images/header/logo_bg.png" alt=""></h1>
-			<h2><a href="javascript:return false;"><img src="images/header/logo.png" alt=""></a></h2>
+			<h2><a href="https://mk040505.github.io/booksarok/"><img src="images/header/logo.png" alt=""></a></h2>
 	</div>
 	<div id="gnb_wrap">
 		<ul id="gnb">
-			<li><a href="javascript:return false;">회사소개</a></li>
-			<li><a href="javascript:return false;">중고도서검색</a></li>
-			<li><a href="javascript:return false;">도서등록</a></li>
-			<li><a href="javascript:return false;">이벤트</a></li>
-			<li><a href="javascript:return false;">마이페이지</a></li>
-			<li><a href="javascript:return false;">고객센터</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub1/">회사소개</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub2/">중고도서검색</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub3/">도서등록</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub4/">이벤트</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub5/">마이페이지</a></li>
+			<li><a href="https://mk040505.github.io/booksarok_sub6/">고객센터</a></li>
 		</ul>
 	</div>
 
@@ -235,7 +235,7 @@
 		<div class="section4_box">
 			<p class="section4_text">중고서점 북새록이 더 궁금하다면 ? 자세히 보러가기</p>
 			<p class="section4_arrow"><img src="images/section4/letgo_arrow.png" alt="보러가기"></p>
-			<p class="section4_logo"><a href="javascript:return false;"><img src="images/section4/letgo_logo.png" alt="보러가기"></a></p>
+			<p class="section4_logo"><a href="https://mk040505.github.io/booksarok_sub1/"><img src="images/section4/letgo_logo.png" alt="보러가기"></a></p>
 		</div>
 	</div>
 
