--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<th><label for="">도서명</label></th>
 							<td>
 								<input type="text" size="20">
-								<input type="button" value="검색">
+								<a href="javascript:return false;"><input type="button" value="검색"></a>
 							</td>
 						</tr>
 						<tr> <!--2-->
