--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<th><label for="">도서명</label></th>
 							<td>
 								<input type="text" size="20">
-								<a href="javascript:return false;"><input type="button" value="검색"></a>
+								<a href="javascript:return false;" class="btn_A">검색</a>
 							</td>
 						</tr>
 						<tr> <!--2-->
@@ -98,7 +98,7 @@
 								<br>판매 가능 여부가 바뀔 수 있습니다.</li>	
 							<li>북새록에 도서등록 이후, 20일 이내에 택배사에서 픽업을 하지 않은 신청건은 자동 취소됩니다.</li>
 						</ul>
-						<a href="javascript:return false;" class="btn">등록</a>
+						<a href="javascript:return false;" class="btn_B">등록</a>
 				
 			</div>
 	</div>
